# fgv-projetos-2026-1

assignment_1/task_1/2/sillas/: setup_rds.py
assignment_1/task_2/grupo_2/sillas/: README.md
assignment_1/task_3/grupo_2/sillas/: .env.example  README.md  pyproject.toml
assignment_1/task_3/grupo_2/sillas/notebooks/: task3_dashboard.ipynb
assignment_1/task_3/grupo_2/sillas/scripts/: analytics_dashboard.py  common.py  run_task3.py  setup_athena.py  validate_task3.py
assignment_1/task_3/grupo_2/sillas/sql/: detailed_sales.sql  dim_products.sql  sales_by_country.sql
assignment_1/task_3/grupo_2/sillas/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
assignment_2/task_1/: incremental_source.md
assignment_2/task_1/grupo_2/sillas/: .env.example  README.md  pyproject.toml
assignment_2/task_1/grupo_2/sillas/scripts/: bootstrap.py  common.py  init_watermark.py  simulate_new_orders.py  validate_incremental_source.py
assignment_2/task_2/: incremental_etl.md
assignment_2/task_2/grupo_2/sillas/: .env.example  .gitignore  README.md
assignment_2/task_2/grupo_2/sillas/glue/: etl_job.py
assignment_2/task_2/grupo_2/sillas/scripts/: common.py  init_watermark.py  load_classicmodels.py  run_pipeline.py  validate_incremental_source.py  validate_pipeline.py
assignment_2/task_2/grupo_2/sillas/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
