[project]
name = "task3-sillas"
version = "0.1.0"
description = "Task 3 analytics and dashboard for classicmodels"
requires-python = ">=3.11"
dependencies = [
    "awswrangler>=3.14.0",
    "boto3>=1.34.0",
    "ipywidgets>=8.1.0",
    "jupyterlab>=4.2.0",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.1",
    "seaborn>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
